10947 loader: memory related issues in module.c Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: John Levon <john.levon@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>